# BABE_crawler

./: .env.example  .gitignore  FEATURES_COMPARISON.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  universal_scraper.py  universal_scraper_pro.py
config/: default.yaml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  GETTING_STARTED.md
src/: main.py
src/crawler/: __init__.py  engine.py
src/crawler/spiders/: __init__.py  base_spider.py
src/storage/: __init__.py  base_storage.py
src/utils/: __init__.py  config_loader.py  logger_config.py
tests/: __init__.py  conftest.py  test_engine.py
